fixed ui overlapping in game-menu

--- a/client/src/app/shared/create-game/create-game.component.scss
+++ b/client/src/app/shared/create-game/create-game.component.scss
@@ -3,6 +3,7 @@
   left: 0;
   display: flex;
 
+  padding: 2rem;
   min-height: 78.5vh;
 
   color: rgba(255, 255, 255, 1);
@@ -23,13 +24,9 @@
       display: flex;
 
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: space-evenly;
       align-items: center;
 
-      padding: 2rem 0;
-      // label {
-      //   padding: 0 1rem;
-      // }
       input {
         padding: 0.5rem 1rem;
         border: 1px solid;
